--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "chai-http": "^4.3.0",
+    "dotenv": "^8.2.0",
+    "ethereumjs-tx": "^2.1.2",
     "express": "^4.17.1",
     "ganache-cli": "^6.9.1",
     "lite-server": "^2.6.1",
@@ -27,7 +29,7 @@
   "scripts": {
     "dev": "lite-server",
     "test": "mocha --exit --recursive --timeout 60000",
-    "build": "node buildup.js",
-    "start" : "node serviceup.js"
+    "build": "node index.js",
+    "start": "node index.js"
   }
 }
